--- a/index.html
+++ b/index.html
@@ -72,10 +72,25 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" style="text-align: left" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#courses">courses</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" style="font-size: 12px;margin-left: 15px;" href="#dockerjava">Docker & Java Synergy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" style="font-size: 12px;margin-left: 15px;" href="#loggingmonitoring">Loging & Monitoring</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" style="font-size: 12px;margin-left: 15px;" href="#advancedjvm">Advanced JVM</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" style="font-size: 12px;margin-left: 15px;" href="#javamodularity">Java Modularity</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" style="font-size: 12px;margin-left: 15px;" href="#jvmgc">JVM Garbage Collector</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#about">Contact</a>
@@ -102,7 +117,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
             touchpoints for offshoring.</p>
         </a>
 
-        <a class="resume-content js-scroll-trigger" style="display: block; padding-left: 20px; width: 50%" href="#dockerjava">
+        <a class="resume-content js-scroll-trigger" style="display: block; padding-left: 20px; width: 50%" href="#loggingmonitoring">
           <img width="100px" style="float: left;" src="img/elk.png">
           <h3 class="mb-0">Logging & Monitoring</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
@@ -114,7 +129,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <a class="resume-content js-scroll-trigger" style="display: block; padding-right: 20px; width: 50%" href="#dockerjava">
+        <a class="resume-content js-scroll-trigger" style="display: block; padding-right: 20px; width: 50%" href="#advancedjvm">
           <img width="100px" style="float: left" src="img/jvm.png">
           <h3 class="mb-0">Advanced JVM</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
@@ -123,7 +138,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
             along the information highway will close the loop on focusing solely on the bottom line.</p>
         </a>
 
-        <a class="resume-content js-scroll-trigger" style="display: block; padding-left: 20px; width: 50%" href="#dockerjava">
+        <a class="resume-content js-scroll-trigger" style="display: block; padding-left: 20px; width: 50%" href="#javamodularity">
           <img width="100px" style="float: left" src="img/modularity.png">
           <h3 class="mb-0">Java Modularity</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
@@ -135,7 +150,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <a class="resume-content js-scroll-trigger" style="display: block; padding-right: 20px; width: 50%" href="#dockerjava">
+        <a class="resume-content js-scroll-trigger" style="display: block; padding-right: 20px; width: 50%" href="#jvmgc">
           <img width="100px" style="float: left" src="img/gc.png">
           <h3 class="mb-0">JVM Garbage Collector</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
