--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1, viewport-fit=cover">
-        <title>Java/JVM Pages and Notes</title>
-        <link href="docs/assets/css/main.css" rel="stylesheet">
+        <title>Java Virtual Machine</title>
+        <link href="main.css" rel="stylesheet">
     </head>
     <body>
-        <script type="module" src="./utils/dev.js"></script>
+        <script type="module">
+            import {marked} from './lib/marked-es6.js';
+            import {hljs} from './lib/highlight-es6.js';
+
+            marked.setOptions({
+                langPrefix: '',
+                highlight: function(code) {
+                    return hljs.highlightAuto(code).value;
+                },
+            });
+
+            (async function() {
+
+                // Read url for requested page
+                const page = location.search.split('?')[1];
+
+                // Try to load pages's markdown, or index if none requested
+                let response = await fetch(`./pages/${page || 'index'}.md`, {method: 'GET'});
+
+                let header = await fetch(`./pages/header.md`, {method: 'GET'});
+
+                // If not found, fallback to loading index
+                if (!response.ok) response = await fetch(`./pages/index.md`, {method: 'GET'});
+
+                // Get text from response
+                const text = await response.text();
+                const headerContent = await header.text();
+
+                // Replace this page's content with the converted markdown to html and add the header to all pages
+                document.body.innerHTML = headerContent + marked(text);
+            })();
+        </script>
     </body>
 </html>
